<resources>
    <string name="app_name">作業 八: 李添熙</string>
    <string name="option">項目：</string>
    <string name="date">日期：</string>
    <string-array name="option_list">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string name="spn_option_list_promt">Breakfast</string>
    <string name="money">金額：</string>
    <string name="btnInput">輸入</string>
    <string name="btnRecord">記錄</string>
</resources>
