<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thianhe.hw8.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/option"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spnOption"
        android:layout_width="280dp"
        android:layout_height="23dp"
        android:layout_marginTop="16dp"
        android:entries="@array/option_list"
        android:prompt="@string/spn_option_list_promt"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="280dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/spnOption" />

    <DatePicker
        android:id="@+id/dpkDataPicker"
        android:layout_width="200dp"
        android:layout_height="179dp"
        android:layout_marginTop="52dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toStartOf="@+id/calendarView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDate">

    </DatePicker>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="191dp"
        android:layout_height="294dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dpkDataPicker"
        app:layout_constraintTop_toBottomOf="@+id/editDate"></CalendarView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="19dp"
        android:layout_marginBottom="44dp"
        android:layout_marginTop="140dp"
        android:text="@string/money"
        app:layout_constraintBottom_toTopOf="@+id/btnInput"
        app:layout_constraintEnd_toStartOf="@+id/editCost"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dpkDataPicker" />

    <EditText
        android:id="@+id/editCost"
        android:layout_width="280dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <Button
        android:id="@+id/btnInput"
        android:layout_width="121dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/btnInput"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRecord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCost" />

    <Button
        android:id="@+id/btnRecord"
        android:layout_width="121dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/btnRecord"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnInput"
        app:layout_constraintTop_toBottomOf="@+id/editCost" />


</android.support.constraint.ConstraintLayout>
